# Quantum-Deep-Hedging

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_pinned.txt  requirements_pinned_312.txt
.github/workflows/: pypi_publish.yml  python-ci.yml
HedgingEngine/: CMakeLists.txt  CMakePresets.json  Dockerfile
HedgingEngine/include/: network_util.h
HedgingEngine/scripts/: 01_interact_with_container.py
HedgingEngine/src/: main.cpp
legend/: legend-project.json
legend/finance/governance/: MarketDataProfile.pure
legend/finance/heston/: HestonParameters.pure  HestonPath.pure
notebooks/: 2._Market-Simulators.ipynb  3_Training.ipynb  Untitled.ipynb
python/: Dockerfile  train.py
python/src/: architecture.py  black_scholes.py  data_ingest.py  market_simulations.py  quantum_architecture.py  utils.py
python/tests/: test_architecture.py  test_market_simulation.py
research/: block_encoding_qsvt_qram.md
